2009-03-14  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (ensure_dashboard_initialized): takes an argument
	which tells it whether it's called as part of the XXGLOBAL (auto
	app) server and, if yes, turns off the dashboard attachment
	critical error which in this case is a false alarm. Fixes bug
	#476289

2009-03-08  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (send_entire_file): attempts to map file name using
	mono_portability_find_file which is able to find files with the
	same name but different case if MONO_IOMAP is in effect.
	Added a new directive, MonoIOMAP which takes two parameters - the
	alias and MONO_IOMAP-style value (all/case/drive). This directive
	switches MONO_IOMAP on for that alias within mod_mono as well as
	exports the MONO_IOMAP environment variable in the backend's
	environment.

	* mono-io-portability.c, mono-io-portability.h: added. Copied from
	mono runtime and modified for mod_mono purposes.

2009-02-20  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.h: removed Apache 1.3 support.
	Defined several macros used in mod_mono.c

	* mod_mono.c: removed Apache 1.3 support.
	Replaced atoi calls with own function to convert strings to
	integers with a fall back to a provided default (string_to_long).
	Adjusted levels of several DEBUG_PRINT messages.
	Improved dashboard initialization code.
	Some refactoring to make code more granular.
	Redirecting stdout to /dev/null depends on whether we run with
	debugging on or not and whether we were compiled with
	--enable-debug or not.

	* Makefile.am: removed Apache 1.3 support

2009-01-28  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.h, mod_mono.c, Makefile.am: removed all the traces of
	Apache 1.3 support
